--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
+        "cordova": "^7.1.0",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-gpslocation": "^1.0.0",
-        "cordova-plugin-whitelist": "^1.3.2"
+        "cordova-plugin-whitelist": "^1.3.2",
+        "mobileui": "^0.1.17"
     },
     "cordova": {
         "plugins": {
